+mustafa | write html for setting component, fix alignment in invoice header

--- a/src/assets/css/style-2.css
+++ b/src/assets/css/style-2.css
@@ -671,7 +671,7 @@ input[type="checkbox"] {
     text-align: center;
     margin: 0 1rem 0 0;
     cursor: pointer;
-    left: 8px;
+    left: 0px;
 }
 
 input[type="checkbox"]:checked:before {
